add UI for the game-buttons to get user selection.

--- a/rps.html
+++ b/rps.html
@@ -4,9 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
+  <link rel="stylesheet" href="./rps-style.css">
   <script src="./rps.js"></script>
 </head>
 <body>
-   
+  <h1>Rock Paper Scissors</h1>
+  <p>The game is played between a human[you] & computer. For each round,
+     you click one of the buttons to make the selection. Winner of the round will
+     earn a point and after each round the current score showing the winner of 
+     the round will be displayed below the buttons. The winner of the game will 
+     be announced once a player earns 5 points(wins).</p>
+  <div class="container">
+    <div class="image-container">
+      <img src="./images/rps-rock.jpeg" alt="rock-image">
+      <img src="./images/rps-paper.jpeg" alt="paper-image">
+      <img src="./images/rps-scissors.jpeg" alt="scissors-image">
+    </div>
+    <div class="btn-container">
+      <button id="btn-rock">Rock</button>
+      <button id="btn-paper">Paper</button>
+      <button id="btn-scissors">Scissors</button>
+    </div>  
+  </div>
 </body>
-</html>
+</html> 
