add play again button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
   <h1>{Rock Paper Scissors}</h1>
   <p>The game is played between 2 players [you & the computer]. For each round,
-     you click one of the buttons to make the selection. The winner
-     earns a point after each round and the player who gets to 5 points first wins
+     you click one of the each round and the player who gets to 5 points first wins
      the game. Click on the "Play again" button to restart the game.</p>
   <div class="container">
     <div class="image-container">
